# zk-otp-escrow-for-w3b-sui-Hackathon

./: .editorconfig  .gitignore  Makefile.toml  Move.toml
circuit/: .gitignore  main.circom  package.json  public_inputs.json
contracts/zkescrow/: Move.toml
contracts/zkescrow/sources/: helpers.move  my_hero.move  nfp_kiosk.move  owner_cap.move  phone.move  proof_policy.move  unlock.move  utils.move  verifier.move  zk_nfp.move  zk_safe.move  zk_unlock.move
prover/: .gitignore  Cargo.toml  prover_inputs.json  public_inputs.json
prover/src/: main.rs
prover/src/lib/: groth16.rs  helpers.rs  mod.rs  utils.rs
scripts/: package.json
scripts/src/: prove.ts  verify.ts
sources/: kiosk.move  proof_policy.move  zk_nfp.move
ui/: .eslintrc.json  next.config.js  package.json
ui/src/: types.ts
ui/src/app/: layout.tsx  page.tsx
ui/src/app/admin/: page.tsx
ui/src/app/claim/: page.tsx
ui/src/app/offer/: page.tsx
ui/src/app/offeror/: page.tsx
ui/src/components/: AppBar.tsx  ChatInput copy.tsx  ChatInput.tsx  CountdonwTimer.tsx  LoginButton.tsx
ui/src/moveCall/types/: index.ts
ui/src/moveCall/zk-escrow/: index.ts
ui/src/store/: index.ts
ui/src/utils/: web3.ts
ui/src/zkbuilder/: index.ts
