[package]
edition = "2021"
name = "utils"
version = "0.1.0"

[[bin]]
name = "build_prover_inputs"
path = "src/bin/build_prover_inputs.rs"

[[bin]]
name = "build_proof"
path = "src/bin/build_proof.rs"

[[bin]]
name = "server"
path = "src/bin/prover_server.rs"

[[bin]]
name = "try"
path = "src/bin/try.rs"

[lib]
name = "prover"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.72"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-circom = {git = "https://github.com/gakonst/ark-circom.git"}
ark-crypto-primitives = {version = "0.4.0", features = ["r1cs", "prf"]}
ark-ec = {version = "0.4.1", features = ["parallel"]}
ark-ff = {version = "0.4.1", features = ["asm", "parallel"]}
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-std = "0.4.0"
axum = "0.6.20"
blst = "0.3.10"
byte-slice-cast = "1.2.2"
chrono = "0.4.26"
derive_more = "0.99.16"
fastcrypto = "0.1.5"
fastcrypto-zkp = "0.1.1"
hex = "0.4.3"
num-bigint = {version = "0.4", default-features = false, features = ["rand"]}
num-traits = "0.2.15"
once_cell = "1.16"
poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", rev = "bf96de3b946e8b343c6b65412bae92f8d32251ad"}
rand = "0.8.5"
regex = "1.7.3"
rustc-hex = "2.1.0"
schemars = "0.8.10"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
sha2 = "0.10.7"
tokio = {version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.1", features = ["cors"]}
tower-layer = "0.3.2"
